empresa-b/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: empresa-b
  namespace: empresa-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: empresa-b
  template:
    metadata:
      labels:
        app: empresa-b
    spec:
      containers:
        - name: empresa-b
          image: empresa-b:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
          command: ["node", "."]
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
