empresa-b/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: empresa-b
spec:
  selector:
    app: empresa-b
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
